--- a/src/backend/app/pyproject.toml
+++ b/src/backend/app/pyproject.toml
@@ -26,6 +26,7 @@ sqlmodel = "^0.0.12"
 numpy = "^1.26.3"
 stripe = "^8.3.0"
 sendgrid = "^6.11.0"
+aiofiles = "^24.1.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.0"
