--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "refine dev",
+    "build": "tsc && refine build",
+    "serve": "refine serve",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "generate-client": "openapi --input https://shebascaravan.com/api/v1/openapi.json --output ./src/client --client axios --useOptions --useUnionTypes --exportSchemas true"
@@ -16,6 +17,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@refinedev/cli": "^2.16.39",
+    "@refinedev/core": "^4.55.0",
+    "@refinedev/simple-rest": "^5.0.8",
     "@stripe/react-stripe-js": "^2.5.0",
     "@stripe/stripe-js": "^3.0.3",
     "axios": "^1.6.5",
