--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@refinedev/cli": "^2.16.39",
     "@refinedev/core": "^4.55.0",
+    "@refinedev/mui": "^5.21.0",
     "@refinedev/simple-rest": "^5.0.8",
     "@stripe/react-stripe-js": "^2.5.0",
     "@stripe/stripe-js": "^3.0.3",
