--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hello-pangea/dnd": "^17.0.0",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@refinedev/cli": "^2.16.39",
