--- a/src/backend/app/pyproject.toml
+++ b/src/backend/app/pyproject.toml
@@ -30,6 +30,7 @@ aiofiles = "^24.1.0"
 pillow = "^11.0.0"
 APScheduler = "^3.11.0"
 py3dbp = "^1.1.2"
+babel = "^2.16.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.0"
