--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,7 +9,7 @@
     "serve": "refine serve",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "generate-client": "openapi --input https://shebascaravan.com/api/v1/openapi.json --output ./src/client --client axios --useOptions --useUnionTypes --exportSchemas true"
+    "generate-client": "openapi --input ${SERVER_HOST}/api/v1/openapi.json --output ./src/client --client axios --useOptions --useUnionTypes --exportSchemas true"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
