--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - traefik.http.middlewares.csrf.headers.hostsProxyHeaders=X-CSRFToken
       - traefik.http.routers.traefik.middlewares=traefik-https-redirect
       - traefik.http.routers.traefik-secure.entrypoints=https
-      - traefik.http.routers.traefik-secure.rule=Host(`monitor.${DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+      - traefik.http.routers.traefik-secure.rule=Host(`monitor.${DOMAIN}`) && (PathPrefix(`/`) || PathPrefix(`/api`) || PathPrefix(`/dashboard`))
       - traefik.http.routers.traefik-secure.middlewares=traefik-auth
       - traefik.http.routers.traefik-secure.tls=true
       - traefik.http.routers.traefik-secure.tls.certresolver=cloudflare
@@ -114,8 +114,14 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.tls=true
-      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`) || PathPrefix(`/public`)
+      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=Host(`dev.${DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`) || PathPrefix(`/public`))
+      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.service=${STACK_NAME?Variable not set}-backend
       - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=8000
+      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-social.rule=Host(`${DOMAIN}`) && (PathPrefix(`/treasure/`) || PathPrefix(`/product/`) || PathPrefix(`/products/`)) && HeadersRegexp(`User-Agent`, `(?i)(facebookexternalhit|twitterbot|linkedinbot|whatsapp|telegrambot|slackbot|skypeuripreview|discordbot|applebot|googlebot|bingbot)`)
+      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-social.tls=true
+      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-social.priority=100
+      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-social.service=${STACK_NAME?Variable not set}-backend-social
+      - traefik.http.services.${STACK_NAME?Variable not set}-backend-social.loadbalancer.server.port=8000
 
   frontend:
     build:
