--- a/src/backend/app/pyproject.toml
+++ b/src/backend/app/pyproject.toml
@@ -31,6 +31,7 @@ pillow = "^11.0.0"
 APScheduler = "^3.11.0"
 py3dbp = "^1.1.2"
 babel = "^2.16.0"
+resend = "^2.17.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.0"
