--- a/src/backend/app/pyproject.toml
+++ b/src/backend/app/pyproject.toml
@@ -12,6 +12,7 @@ python-multipart = "^0.0.6"
 email-validator = "^2.1.0.post1"
 celery = "^5.3.5"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+bcrypt = "4.0.1"
 tenacity = "^8.2.3"
 pydantic = "<2.0"
 emails = "^0.6"
