--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -88,7 +88,7 @@ services:
       - traefik.docker.network=${TRAEFIK_PUBLIC_NETWORK?Variable not set}
 
   umami:
-    image: ghcr.io/umami-software/umami:postgresql-latest
+    image: ghcr.io/umami-software/umami:latest
     restart: always
     env_file:
       - .env
